--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    namespace 'ir.mohammadnavabi.paymentcardscannerexample'
+    compileSdk 34
 
     defaultConfig {
         applicationId "ir.mohammadnavabi.paymentcardscannerexample"
         minSdk 21
-        targetSdk 32
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
